--- a/.github/workflows/build-docker.yaml
+++ b/.github/workflows/build-docker.yaml
@@ -1,36 +1,37 @@
 name: Build Docker Image
 
 on:
-  workflow_dispatch:
-    inputs:
-      tag_name:
-        description: 'Tag to build (e.g. v0.18.0.0)'
-        required: true
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build-docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Repository
+      - name: Checkout Master (with Dockerfile)
         uses: actions/checkout@v4
         with:
-          ref: master # Start with master to get the Dockerfile and workflows
+          ref: master
           fetch-depth: 0
           submodules: recursive
 
-      - name: Prepare Upstream Source
-        if: ${{ inputs.tag_name != '' }}
+      - name: Prepare Upstream Code and Restore Dockerfile
         run: |
-          echo "Switching to upstream tag: ${{ inputs.tag_name }}"
-          # Checkout the specific tag
-          git checkout ${{ inputs.tag_name }}
+          echo "Building tag: ${{ github.ref_name }}"
           
-          # Restore the custom Dockerfile from master branch
-          git checkout master -- Dockerfile
-          # Restore workflows to ensure consistency (optional but good practice)
-          git checkout master -- .github
+          # 1. Preserve our custom files from master
+          cp Dockerfile /tmp/Dockerfile.saved
+          # Optionally preserve workflows if needed, though they are already loaded
           
-          echo "Ready to build ${{ inputs.tag_name }} with custom Dockerfile"
+          # 2. Checkout the specific tag (upstream code state)
+          git checkout ${{ github.ref_name }}
+          
+          # 3. Restore the Dockerfile
+          cp /tmp/Dockerfile.saved Dockerfile
+          
+          echo "Checked out ${{ github.ref_name }} and restored custom Dockerfile"
+          ls -la Dockerfile
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -44,16 +45,16 @@ jobs:
           context: .
           file: ./Dockerfile  # Ensure the correct Dockerfile is used
           push: true
-          tags: nyancod3r/monero_cli:${{ inputs.tag_name }},nyancod3r/monero_cli:latest,nyancod3r/monero_cli:${{ github.sha }}
+          tags: nyancod3r/monero_cli:${{ github.ref_name }},nyancod3r/monero_cli:latest,nyancod3r/monero_cli:${{ github.sha }}
 
       - name: Extract Hash from Logs
         run: |
-          inspect_output=$(docker inspect "nyancod3r/monero_cli:${{ inputs.tag_name }}")
+          inspect_output=$(docker inspect "nyancod3r/monero_cli:${{ github.ref_name }}")
           image_sha256=$(echo "$inspect_output" | jq -r '.[0].Id')
           echo "Image SHA256 Hash: $image_sha256" >> image_description.txt
 
       - name: Update Release Description
-        if: ${{ false }} # Disable for now as we are unrelated to the upstream GH release
+        if: ${{ false }} # Disable for now as we don't control the release object
         run: |
           release_id=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/nyancod3r/monero-to-docker/releases/tags/${{ github.event.release.tag_name }}" | jq -r '.id')
           current_description=$(curl -sSL -H "Authorization: Bearer ${{ secrets.GH_TOKEN }}" "https://api.github.com/repos/nyancod3r/monero-to-docker/releases/$release_id" | jq -r '.body')
